--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/url-tester
+MONGO_URI=mongodb+srv://pjadwanibe21:prem1234@cluster0.sho3y.mongodb.net/url-tester
 PORT=5000
 
 
